# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import geminiRouter from "./gemini";
+import iapRouter from "./iap";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/gemini", geminiRouter);
+router.use("/iap", iapRouter);
 
 export default router;
